packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_get_slicePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_QUAD>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_LONG>,
              ISC_LONG,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ISC_LONG>)>>('isc_get_slice');
  late final _isc_get_slice = _isc_get_slicePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_QUAD>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_LONG>,
          int,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ISC_LONG>)>();

  int isc_interprete(
    ffi.Pointer<ISC_SCHAR> arg0,
    ffi.Pointer<ffi.Pointer<ISC_STATUS>> arg1,
  ) {
    return _isc_interprete(
      arg0,
      arg1,
    );
  }

  late final _isc_interpretePtr = _lookup<
      ffi.NativeFunction<
          ISC_LONG Function(ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<ffi.Pointer<ISC_STATUS>>)>>('isc_interprete');
  late final _isc_interprete = _isc_interpretePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_SCHAR>, ffi.Pointer<ffi.Pointer<ISC_STATUS>>)>();

  int fb_interpret(
    ffi.Pointer<ISC_SCHAR> arg0,
    int arg1,
    ffi.Pointer<ffi.Pointer<ISC_STATUS>> arg2,
  ) {
    return _fb_interpret(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _fb_interpretPtr = _lookup<
      ffi.NativeFunction<
          ISC_LONG Function(ffi.Pointer<ISC_SCHAR>, ffi.Uint32,
              ffi.Pointer<ffi.Pointer<ISC_STATUS>>)>>('fb_interpret');
  late final _fb_interpret = _fb_interpretPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<ffi.Pointer<ISC_STATUS>>)>();

  int isc_open_blob(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<isc_blob_handle> arg3,
    ffi.Pointer<ISC_QUAD> arg4,
  ) {
    return _isc_open_blob(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_open_blobPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Pointer<ISC_QUAD>)>>('isc_open_blob');
  late final _isc_open_blob = _isc_open_blobPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_blob_handle>,
          ffi.Pointer<ISC_QUAD>)>();

  int isc_open_blob2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<isc_blob_handle> arg3,
    ffi.Pointer<ISC_QUAD> arg4,
    int arg5,
    ffi.Pointer<ISC_UCHAR> arg6,
  ) {
    return _isc_open_blob2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_open_blob2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Pointer<ISC_QUAD>,
              ISC_USHORT,
              ffi.Pointer<ISC_UCHAR>)>>('isc_open_blob2');
  late final _isc_open_blob2 = _isc_open_blob2Ptr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_blob_handle>,
          ffi.Pointer<ISC_QUAD>,
          int,
          ffi.Pointer<ISC_UCHAR>)>();

  int isc_prepare_transaction2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_UCHAR> arg3,
  ) {
    return _isc_prepare_transaction2(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_prepare_transaction2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ISC_USHORT,
              ffi.Pointer<ISC_UCHAR>)>>('isc_prepare_transaction2');
  late final _isc_prepare_transaction2 =
      _isc_prepare_transaction2Ptr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>, int,
              ffi.Pointer<ISC_UCHAR>)>();

  void isc_print_sqlerror(
    int arg0,
    ffi.Pointer<ISC_STATUS> arg1,
  ) {
    return _isc_print_sqlerror(
      arg0,
      arg1,
    );
  }

  late final _isc_print_sqlerrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ISC_SHORT, ffi.Pointer<ISC_STATUS>)>>('isc_print_sqlerror');
  late final _isc_print_sqlerror = _isc_print_sqlerrorPtr
      .asFunction<void Function(int, ffi.Pointer<ISC_STATUS>)>();

  int isc_print_status(
    ffi.Pointer<ISC_STATUS> arg0,
  ) {
    return _isc_print_status(
      arg0,
    );
  }

  late final _isc_print_statusPtr =
      _lookup<ffi.NativeFunction<ISC_STATUS Function(ffi.Pointer<ISC_STATUS>)>>(
          'isc_print_status');
  late final _isc_print_status =
      _isc_print_statusPtr.asFunction<int Function(ffi.Pointer<ISC_STATUS>)>();

  int isc_put_segment(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_blob_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
  ) {
    return _isc_put_segment(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_put_segmentPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_put_segment');
  late final _isc_put_segment = _isc_put_segmentPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_blob_handle>, int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_put_slice(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<ISC_QUAD> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
    int arg6,
    ffi.Pointer<ISC_LONG> arg7,
    int arg8,
    ffi.Pointer<ffi.Void> arg9,
  ) {
    return _isc_put_slice(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
      arg9,
    );
  }

  late final _isc_put_slicePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_QUAD>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_LONG>,
              ISC_LONG,
              ffi.Pointer<ffi.Void>)>>('isc_put_slice');
  late final _isc_put_slice = _isc_put_slicePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_QUAD>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_LONG>,
          int,
          ffi.Pointer<ffi.Void>)>();

  int isc_que_events(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<ISC_LONG> arg2,
    int arg3,
    ffi.Pointer<ISC_UCHAR> arg4,
    ISC_EVENT_CALLBACK arg5,
    ffi.Pointer<ffi.Void> arg6,
  ) {
    return _isc_que_events(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_que_eventsPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<ISC_LONG>,
              ffi.Int16,
              ffi.Pointer<ISC_UCHAR>,
              ISC_EVENT_CALLBACK,
              ffi.Pointer<ffi.Void>)>>('isc_que_events');
  late final _isc_que_events = _isc_que_eventsPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<ISC_LONG>,
          int,
          ffi.Pointer<ISC_UCHAR>,
          ISC_EVENT_CALLBACK,
          ffi.Pointer<ffi.Void>)>();

  int isc_rollback_retaining(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
  ) {
    return _isc_rollback_retaining(
      arg0,
      arg1,
    );
  }

  late final _isc_rollback_retainingPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>)>>('isc_rollback_retaining');
  late final _isc_rollback_retaining = _isc_rollback_retainingPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>)>();

  int isc_rollback_transaction(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
  ) {
    return _isc_rollback_transaction(
      arg0,
      arg1,
    );
  }

  late final _isc_rollback_transactionPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>)>>('isc_rollback_transaction');
  late final _isc_rollback_transaction =
      _isc_rollback_transactionPtr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>)>();

  int isc_start_multiple(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    int arg2,
    ffi.Pointer<ffi.Void> arg3,
  ) {
    return _isc_start_multiple(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_start_multiplePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Int16,
              ffi.Pointer<ffi.Void>)>>('isc_start_multiple');
  late final _isc_start_multiple = _isc_start_multiplePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>, int,
          ffi.Pointer<ffi.Void>)>();

  int isc_start_transaction(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    int arg2,
    ffi.Pointer<isc_db_handle> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5
  ) {
    return _isc_start_transaction(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_start_transactionPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>, ffi.Int16,
              ffi.Pointer<isc_db_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>
   )>>('isc_start_transaction');
  late final _isc_start_transaction = _isc_start_transactionPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>, int,
          ffi.Pointer<isc_db_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>
          )>();

  int fb_disconnect_transaction(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
  ) {
    return _fb_disconnect_transaction(
      arg0,
      arg1,
    );
  }

  late final _fb_disconnect_transactionPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>)>>('fb_disconnect_transaction');
  late final _fb_disconnect_transaction =
      _fb_disconnect_transactionPtr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>)>();

  int isc_sqlcode(
    ffi.Pointer<ISC_STATUS> arg0,
  ) {
    return _isc_sqlcode(
      arg0,
    );
  }
